k8s/manifests/n8n/ingressroute-pomerium.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: n8n-pomerium
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`reyvateils.harvestasya.org`)
    services:
    - name: pomerium-proxy
      namespace: pomerium
      port: 443
      scheme: https
      serversTransport: pomerium-transport
